--- a/index.html
+++ b/index.html
@@ -6,59 +6,117 @@
   <title>Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Pacifico&display=swap" rel="stylesheet">
-
 </head>
 
-<body class="relative bg-black text-white min-h-screen overflow-hidden font-['Dancing_Script']">
-  <!-- Animated Background Grid -->
-  <div class="absolute inset-0 z-0 grid grid-cols-3 gap-4 p-4 opacity-30 pointer-events-none">
-    <!-- Column 1 -->
-    <div class="space-y-4 col-up">
-      <img src="static/img1.jpg" class="w-full rounded-lg shadow-lg" />
-      <img src="static/img4.jpg" class="w-full rounded-lg shadow-lg" />
-    </div>
-    <!-- Column 2 -->
-    <div class="space-y-4 col-down">
-      <img src="static/img2.jpg" class="w-full rounded-lg shadow-lg" />
-      <img src="static/img5.jpg" class="w-full rounded-lg shadow-lg" />
-    </div>
-    <!-- Column 3 -->
-    <div class="space-y-4 col-up">
-      <img src="static/img3.jpg" class="w-full rounded-lg shadow-lg" />
-      <img src="static/img6.jpg" class="w-full rounded-lg shadow-lg" />
-    </div>
-  </div>
+<body class="relative bg-black text-white min-h-screen font-['Dancing_Script']">
 
   <!-- Foreground Content -->
   <div class="relative z-10 flex flex-col min-h-screen">
-    
+
     <!-- Navbar -->
-    <nav class="flex flex-col md:flex-row justify-between items-center px-6 py-4 border-b border-white bg-black/60 backdrop-blur-sm space-y-3 md:space-y-0">
-      <div class="text-2xl font-bold tracking-widest text-center md:text-left">T.K.SRIRAM PHOTOGRAPHY</div>
-      <div class="space-x-0 md:space-x-6 text-lg flex flex-col md:flex-row items-center gap-2 md:gap-0">
-        <a href="/" class="hover:underline">Home</a>
-        <a href="#" class="hover:underline">Portfolio</a>
-        <a href="#" class="hover:underline">About Me</a>
+    <nav class="w-full px-6 py-4 border-b border-white bg-black/80 backdrop-blur-sm">
+      <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
+        <div class="text-2xl font-bold tracking-widest text-center md:text-left">
+          T.K.SRIRAM PHOTOGRAPHY
+        </div>
+        <div class="text-lg flex flex-col md:flex-row items-center gap-2 md:gap-6">
+          <a href="/" class="hover:underline hover:text-black transition">Home</a>
+          <a href="#" class="hover:underline hover:text-black transition">Portfolio</a>
+          <a href="#" class="hover:underline hover:text-black transition">About Me</a>
+        </div>
       </div>
     </nav>
 
     <!-- Main Content -->
-    <div class="flex-grow flex items-center justify-center px-4">
-      <div class="text-center">
-        <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold mb-8">Welcome Photophiles</h1>
+    <div class="flex-grow flex items-center justify-center px-6 py-16">
+      <div class="text-center max-w-3xl mx-auto">
+        <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-6 animate-pulse">
+          Welcome Photophiles
+        </h1>
+        <p class="text-lg mb-10 text-white/90 leading-relaxed">
+          Dive into a world where every frame tells a story. Whether you're a nature enthusiast, a portrait lover, or a street photography fan, you're in the right place.
+        </p>
         <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
-          <button onclick="window.location.href='/signup'"
-            class="w-full sm:w-auto px-6 py-3 bg-white text-black font-semibold rounded-lg shadow hover:bg-gray-300 transition">
+          <button onclick="window.location.href='/signup'" class="px-6 py-3 bg-white text-black font-semibold rounded-lg shadow hover:bg-black hover:text-white transition">
             Signup
           </button>
-          <button onclick="window.location.href='/signin'"
-            class="w-full sm:w-auto px-6 py-3 bg-transparent border border-white text-white font-semibold rounded-lg shadow hover:bg-white hover:text-black transition">
+          <button onclick="window.location.href='/signin'" class="px-6 py-3 border border-white text-white font-semibold rounded-lg hover:bg-white hover:text-black transition">
             Signin
           </button>
         </div>
       </div>
     </div>
 
+    <!-- Services Section -->
+    <section class="px-6 py-16 bg-black text-center border-t border-white/30">
+      <div class="max-w-6xl mx-auto">
+        <h2 class="text-3xl font-bold mb-10">My Services</h2>
+        <div class="grid md:grid-cols-3 gap-8">
+          <div class="p-6 rounded-lg bg-white text-black font-semibold shadow-md">
+            Wedding Photography
+          </div>
+          <div class="p-6 rounded-lg border border-white text-white font-semibold shadow-md">
+            Nature & Landscape Shoots
+          </div>
+          <div class="p-6 rounded-lg bg-white text-black font-semibold shadow-md">
+            Portrait & Fashion Photography
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="px-6 py-16 bg-black text-center border-t border-white/30">
+      <div class="max-w-5xl mx-auto">
+        <h2 class="text-3xl font-bold mb-10">What Clients Say</h2>
+        <div class="grid md:grid-cols-2 gap-8 text-left">
+          <div class="p-6 rounded-lg bg-white/10 shadow-md">
+            <p class="italic">“Sriram’s photography captured our wedding perfectly. Every photo tells a story.”</p>
+            <div class="mt-4 font-bold text-white">— Priya & Karthik</div>
+          </div>
+          <div class="p-6 rounded-lg bg-white/10 shadow-md">
+            <p class="italic">“Absolutely stunning nature shots. I felt like I was back in the forest.”</p>
+            <div class="mt-4 font-bold text-white">— Aarav Mehta</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="px-6 py-16 bg-black text-center border-t border-white/30">
+      <div class="max-w-3xl mx-auto">
+        <h2 class="text-3xl font-bold mb-6">About Me</h2>
+        <p class="text-white/90 text-lg leading-relaxed">
+          I'm T.K. Sriram, a passionate photographer capturing life's beautiful moments through my lens. From urban chaos to natural serenity, I find beauty in every frame. Let’s create art together.
+        </p>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="px-6 py-12 bg-black border-t border-white/20 text-sm">
+      <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-10 text-center md:text-left">
+        <div>
+          <h3 class="text-lg font-bold mb-2">Contact</h3>
+          <p>Email: contact@tksriramphoto.com</p>
+          <p>Phone: +91 98765 43210</p>
+        </div>
+        <div>
+          <h3 class="text-lg font-bold mb-2">Quick Links</h3>
+          <ul class="space-y-1">
+            <li><a href="/" class="hover:text-black transition">Home</a></li>
+            <li><a href="#" class="hover:text-black transition">Portfolio</a></li>
+            <li><a href="#" class="hover:text-black transition">Book a Shoot</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="text-lg font-bold mb-2">Follow Me</h3>
+          <p class="text-white/80">Instagram | Facebook | Twitter</p>
+        </div>
+      </div>
+    </footer>
+
   </div>
 </body>
+
+
 </html>
