--- a/index.html
+++ b/index.html
@@ -6,238 +6,407 @@
   <title>T.K.SRIRAM Photography - Home</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    body {
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #000000 0%, #1a1a1a 50%, #000000 100%);
-      color: #ffffff;
-      line-height: 1.6;
-      overflow-x: hidden;
-    }
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            color: #ffffff;
+            background-color: #000000;
+            overflow-x: hidden;
+        }
 
-    /* Animated background pattern */
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: 
-        radial-gradient(circle at 25% 25%, rgba(255,255,255,0.02) 0%, transparent 50%),
-        radial-gradient(circle at 75% 75%, rgba(255,255,255,0.03) 0%, transparent 50%);
-      animation: backgroundFloat 20s ease-in-out infinite;
-      pointer-events: none;
-      z-index: 1;
-    }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
 
-    @keyframes backgroundFloat {
-      0%, 100% { transform: translateY(0) rotate(0deg); }
-      50% { transform: translateY(-20px) rotate(1deg); }
-    }
+        /* Navigation */
+        .navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.95);
+            backdrop-filter: blur(10px);
+            z-index: 1000;
+            padding: 1rem 0;
+            border-bottom: 1px solid #333;
+            transition: all 0.3s ease;
+        }
 
-    .container {
-      position: relative;
-      z-index: 2;
-    }
+        .nav-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
 
-    /* Navigation */
-    .navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      background: rgba(0, 0, 0, 0.95);
-      backdrop-filter: blur(20px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 1rem 0;
-      z-index: 1000;
-      transition: all 0.3s ease;
-    }
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #ffffff;
+            text-decoration: none;
+            letter-spacing: 2px;
+            transition: color 0.3s ease;
+        }
 
-    .nav-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 2rem;
-    }
+        .logo:hover {
+            color: #cccccc;
+        }
 
-    .logo {
-      font-family: 'Playfair Display', serif;
-      font-size: 1.8rem;
-      font-weight: 700;
-      letter-spacing: 3px;
-      color: #ffffff;
-      text-decoration: none;
-      transition: all 0.3s ease;
-    }
+        .nav-links {
+            display: flex;
+            list-style: none;
+            gap: 2rem;
+        }
 
-    .logo:hover {
-      color: #cccccc;
-      transform: scale(1.02);
-    }
+        .nav-links a {
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            position: relative;
+        }
 
-    .nav-links {
-      display: flex;
-      list-style: none;
-      gap: 2.5rem;
-    }
+        .nav-links a:hover {
+            color: #cccccc;
+        }
 
-    .nav-links a {
-      color: #ffffff;
-      text-decoration: none;
-      font-weight: 400;
-      font-size: 1rem;
-      position: relative;
-      transition: all 0.3s ease;
-      padding: 0.5rem 0;
-    }
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: #ffffff;
+            transition: width 0.3s ease;
+        }
 
-    .nav-links a:hover {
-      color: #cccccc;
-    }
+        .nav-links a:hover::after {
+            width: 100%;
+        }
 
-    .nav-links a::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background: #ffffff;
-      transition: width 0.3s ease;
-    }
+        .nav-buttons {
+            display: flex;
+            gap: 1rem;
+        }
 
-    .nav-links a:hover::after {
-      width: 100%;
-    }
+        .btn {
+            padding: 0.5rem 1.5rem;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+            cursor: pointer;
+            display: inline-block;
+        }
 
-    /* Hero Section */
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 0 2rem;
-      position: relative;
-      overflow: hidden;
-    }
+        .btn-primary {
+            background-color: #ffffff;
+            color: #000000;
+            border-color: #ffffff;
+        }
 
-    /* Grid Background Layer */
-    .hero-grid {
-      position: absolute;
-      inset: 0;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      z-index: 0;
-    }
+        .btn-primary:hover {
+            background-color: transparent;
+            color: #ffffff;
+            border-color: #ffffff;
+        }
 
-    .hero-grid div {
-      background-size: cover;
-      background-position: center;
-    }
+        .btn-secondary {
+            background-color: transparent;
+            color: #ffffff;
+            border-color: #ffffff;
+        }
 
-    /* Overlay */
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6));
-      z-index: 1;
-    }
+        .btn-secondary:hover {
+            background-color: #ffffff;
+            color: #000000;
+        }
 
+        /* Hero Section */
+        .hero {
+            min-height: 100vh;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
 
-    .hero::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0,0,0,0.7);
-    }
+        .hero-grid {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            opacity: 0.3;
+            filter: grayscale(100%);
+        }
 
-    .hero-content {
-      position: relative;
-      z-index: 2;
-      max-width: 800px;
-      animation: fadeInUp 1.2s ease;
-    }
+        .hero-grid > div {
+            background-size: cover;
+            background-position: center;
+            transition: all 0.5s ease;
+        }
 
-    .hero h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: clamp(2.5rem, 6vw, 4.5rem);
-      font-weight: 900;
-      margin-bottom: 1.5rem;
-      color: #ffffff;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-      line-height: 1.1;
-    }
+        .hero-grid > div:hover {
+            opacity: 0.6;
+            transform: scale(1.05);
+        }
 
-    .hero p {
-      font-size: 1.2rem;
-      color: #e0e0e0;
-      margin-bottom: 2.5rem;
-      font-weight: 300;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
+        .hero-content {
+            text-align: center;
+            z-index: 10;
+            max-width: 600px;
+            padding: 2rem;
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+            border-radius: 10px;
+            border: 1px solid #333;
+        }
 
-    .cta-buttons {
-      display: flex;
-      gap: 1.5rem;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
+        .hero-content h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            font-weight: 300;
+            letter-spacing: 3px;
+            animation: fadeInUp 1s ease-out;
+        }
 
-    .btn {
-      padding: 1rem 2.5rem;
-      font-size: 1rem;
-      font-weight: 500;
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-      position: relative;
-      overflow: hidden;
-    }
+        .hero-content p {
+            font-size: 1.2rem;
+            color: #cccccc;
+            line-height: 1.8;
+            animation: fadeInUp 1s ease-out 0.3s both;
+        }
 
-    .btn-primary {
-      background: #ffffff;
-      color: #000000;
-      box-shadow: 0 8px 30px rgba(255,255,255,0.2);
-    }
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
 
-    .btn-primary:hover {
-      background: #f0f0f0;
-      transform: translateY(-2px);
-      box-shadow: 0 12px 40px rgba(255,255,255,0.3);
-    }
+        /* Services Section */
+        .services {
+            padding: 5rem 0;
+            background-color: #111111;
+        }
 
-    .btn-secondary {
-      background: transparent;
-      color: #ffffff;
-      border: 2px solid #ffffff;
-    }
+        .services h2 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 3rem;
+            font-weight: 300;
+            letter-spacing: 2px;
+        }
 
-    .btn-secondary:hover {
-      background: #ffffff;
-      color: #000000;
-      transform: translateY(-2px);
-    }
+        .service-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
 
+        .service-card {
+            background-color: #000000;
+            border-radius: 10px;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            border: 1px solid #333;
+            position: relative;
+        }
+
+        .service-card:hover {
+            transform: translateY(-10px);
+            border-color: #666;
+            box-shadow: 0 20px 40px rgba(255, 255, 255, 0.1);
+        }
+
+        .service-card img {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+            filter: grayscale(100%);
+            transition: all 0.3s ease;
+        }
+
+        .service-card:hover img {
+            filter: grayscale(0%);
+            opacity: 0.8;
+        }
+
+        .service-card h3 {
+            padding: 1.5rem 1.5rem 1rem;
+            font-size: 1.5rem;
+            font-weight: 400;
+            letter-spacing: 1px;
+        }
+
+        .service-card p {
+            padding: 0 1.5rem 1.5rem;
+            color: #cccccc;
+            line-height: 1.6;
+        }
+
+        /* Contact Section */
+        .contact-section {
+            padding: 5rem 0;
+            background-color: #000000;
+        }
+
+        .contact-section h2 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            font-weight: 300;
+            letter-spacing: 2px;
+        }
+
+        .contact-section > p {
+            text-align: center;
+            color: #cccccc;
+            margin-bottom: 3rem;
+            font-size: 1.2rem;
+        }
+
+        .contact-info {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .contact-info p {
+            margin-bottom: 1rem;
+            font-size: 1.1rem;
+        }
+
+        .contact-info a {
+            color: #ffffff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .contact-info a:hover {
+            color: #cccccc;
+        }
+
+        .contact-form {
+            max-width: 600px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        .contact-form input,
+        .contact-form textarea {
+            padding: 1rem;
+            border: 2px solid #333;
+            background-color: #111111;
+            color: #ffffff;
+            border-radius: 5px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+        }
+
+        .contact-form input:focus,
+        .contact-form textarea:focus {
+            outline: none;
+            border-color: #666;
+            background-color: #222222;
+        }
+
+        .contact-form input::placeholder,
+        .contact-form textarea::placeholder {
+            color: #777;
+        }
+
+        .contact-form textarea {
+            resize: vertical;
+            min-height: 120px;
+        }
+
+        .contact-form .btn {
+            align-self: flex-start;
+            font-size: 1rem;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .nav-content {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .nav-links {
+                flex-direction: column;
+                gap: 1rem;
+                text-align: center;
+            }
+
+            .nav-buttons {
+                justify-content: center;
+            }
+
+            .hero-content h1 {
+                font-size: 2rem;
+            }
+
+            .hero-content p {
+                font-size: 1rem;
+            }
+
+            .hero-grid {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+            }
+
+            .services h2,
+            .contact-section h2 {
+                font-size: 2rem;
+            }
+
+            .service-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* Smooth scrolling */
+        html {
+            scroll-behavior: smooth;
+        }
+
+        /* Loading animation for images */
+        .service-card img {
+            opacity: 0;
+            animation: fadeIn 0.5s ease-in-out forwards;
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
+        }
   </style>
 </head>
 
@@ -252,6 +421,10 @@
           <li><a href="#service">Services</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <div class="nav-buttons">
+          <a href="/signup" class="btn btn-primary">Sign Up</a>
+          <a href="/signin" class="btn btn-secondary">Sign In</a>
+        </div>
       </div>
     </nav>
 
@@ -268,42 +441,48 @@
       <div class="hero-content">
         <h1>Welcome Photophiles</h1>
         <p>Dive into a world where every frame tells a story. Whether you're a nature enthusiast, a portrait lover, or a street photography fan, you're in the right place.</p>
-        <div class="cta-buttons">
-          <a href="/signup" class="btn btn-primary">Sign Up</a>
-          <a href="/signin" class="btn btn-secondary">Sign In</a>
+      </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="service" class="services">
+      <h2>My Photography Services</h2>
+      <div class="service-grid">
+        <div class="service-card">
+          <img src="https://picsum.photos/id/1011/400/300" alt="Nature Photography">
+          <h3>Nature Photography</h3>
+          <p>Capturing the untouched beauty of the world around us — from vast landscapes to intricate details of flora and fauna.</p>
+        </div>
+        <div class="service-card">
+          <img src="https://picsum.photos/id/1027/400/300" alt="Portrait Photography">
+          <h3>Portrait Photography</h3>
+          <p>Bringing out the personality and emotions of people in every frame, for memories that last a lifetime.</p>
+        </div>
+        <div class="service-card">
+          <img src="https://picsum.photos/id/1038/400/300" alt="Street Photography">
+          <h3>Street Photography</h3>
+          <p>Documenting candid moments, culture, and the heartbeat of cities with an artistic perspective.</p>
         </div>
       </div>
     </section>
 
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+      <h2>Contact Me</h2>
+      <p>If you’d like to work together or have any questions, feel free to reach out.</p>
+      <div class="contact-info">
+        <p><strong>Email:</strong> <a href="mailto:tksriramphotography@example.com">tksriramphotography@example.com</a></p>
+        <p><strong>Phone:</strong> +91 98765 43210</p>
+        <p><strong>Instagram:</strong> <a href="https://instagram.com/tksriramphotography" target="_blank">@tksriramphotography</a></p>
+      </div>
+      <form class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit" class="btn btn-primary">Send Message</button>
+      </form>
+    </section>
   </div>
-
-  <script>
-    // Smooth scrolling for navigation links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute('href'));
-        if (target) {
-          target.scrollIntoView({
-            behavior: 'smooth',
-            block: 'start'
-          });
-        }
-      });
-    });
-
-    // Navbar scroll effect
-    window.addEventListener('scroll', () => {
-      const navbar = document.querySelector('.navbar');
-      if (window.scrollY > 100) {
-        navbar.style.background = 'rgba(0, 0, 0, 0.98)';
-        navbar.style.borderBottom = '1px solid rgba(255, 255, 255, 0.2)';
-      } else {
-        navbar.style.background = 'rgba(0, 0, 0, 0.95)';
-        navbar.style.borderBottom = '1px solid rgba(255, 255, 255, 0.1)';
-      }
-    });
-
-  </script>
 </body>
+
 </html>
