--- a/index.html
+++ b/index.html
@@ -55,34 +55,34 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="h-screen relative flex items-center justify-center text-center px-6">
-    <!-- Background Grid -->
-    <div class="absolute inset-0 grid grid-cols-3 grid-rows-3">
-      <div class="bg-[url('https://picsum.photos/400?random=1')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=2')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=3')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=4')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=5')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=6')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=7')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=8')] bg-cover bg-center"></div>
-      <div class="bg-[url('https://picsum.photos/400?random=9')] bg-cover bg-center"></div>
-    </div>
+  <section class="h-screen relative flex items-center justify-center px-4 md:px-6">
+    <div class="max-w-7xl mx-auto flex flex-row items-start gap-4 md:gap-8 w-full overflow-x-auto">
+      
+      <!-- Left Text Content -->
+      <div class="relative z-10 text-white w-1/2 min-w-[200px] text-left">
+        <h1 class="text-2xl md:text-6xl font-bold mb-4">
+          <i class="fas fa-camera"></i> Welcome Photophiles
+        </h1>
+        <p class="text-sm md:text-xl text-gray-300 max-w-xs md:max-w-xl">
+          Dive into a world where every frame tells a story. From breathtaking landscapes to intimate portraits, I capture emotions in their purest form.
+        </p>
+      </div>
 
-
-    <!-- Overlay -->
-    <div class="absolute inset-0 bg-black/70"></div>
-
-    <!-- Content -->
-    <div class="relative z-10 text-white">
-      <h1 class="text-3xl md:text-6xl font-bold mb-4">
-        <i class="fas fa-camera"></i> Welcome Photophiles
-      </h1>
-      <p class="text-base md:text-xl text-gray-300 max-w-2xl mx-auto">
-        Dive into a world where every frame tells a story. From breathtaking landscapes to intimate portraits, I capture emotions in their purest form.
-      </p>
+      <!-- Right Grid Images -->
+      <div class="relative z-10 grid grid-cols-3 grid-rows-3 gap-2 w-auto">
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=1');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=2');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=3');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=4');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=5');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=6');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=7');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=8');"></div>
+        <div class="h-20 md:h-24 w-20 md:w-24 bg-cover bg-center rounded-md transition-transform duration-300 transform hover:-translate-x-4" style="background-image: url('https://picsum.photos/150?random=9');"></div>
+      </div>
     </div>
   </section>
+
 
 
   <!-- Contact Section -->
