--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 
   <!-- Navbar -->
   <nav class="bg-black border-b border-gray-700 fixed top-0 left-0 w-full z-50">
-    <div class="max-w-7xl mx-auto flex items-center justify-between px-4 md:px-6 py-4">
+    <div class="max-w-7xl mx-auto flex flex-wrap items-center justify-between px-4 md:px-6 py-3">
       
       <!-- Logo -->
-      <div class="text-lg md:text-xl font-bold flex items-center gap-2">
+      <div class="text-base sm:text-lg md:text-xl font-bold flex items-center gap-2">
         <i class="fas fa-camera"></i> T.K.SRIRAM PHOTOGRAPHY
       </div>
 
-      <!-- Menu (always visible at top) -->
-      <div class="flex items-center gap-6 text-sm sm:text-base">
+      <!-- Menu -->
+      <div class="flex flex-wrap gap-4 sm:gap-6 text-xs sm:text-sm md:text-base mt-3 sm:mt-0">
         <a href="/" class="hover:text-gray-400 flex items-center gap-1">
           <i class="fas fa-home"></i> Home
         </a>
         <a href="/service" class="hover:text-gray-400 flex items-center gap-1">
           <i class="fas fa-briefcase"></i> Services
         </a>
-        <a href="/signup" class="px-3 py-1 border border-white rounded-xl hover:bg-white hover:text-black transition flex items-center gap-1">
+        <a href="/signup" class="px-2 sm:px-3 py-1 border border-white rounded-xl hover:bg-white hover:text-black transition flex items-center gap-1">
           <i class="fas fa-user-plus"></i> Sign Up
         </a>
-        <a href="/signin" class="px-3 py-1 border border-white rounded-xl hover:bg-white hover:text-black transition flex items-center gap-1">
+        <a href="/signin" class="px-2 sm:px-3 py-1 border border-white rounded-xl hover:bg-white hover:text-black transition flex items-center gap-1">
           <i class="fas fa-sign-in-alt"></i> Sign In
         </a>
       </div>
