--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>T.K.SRIRAM Photography</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+        @keyframes scrollY {
+          0%   { transform: translateY(0); }
+          100% { transform: translateY(-50%); } /* Moves up */
+        }
+
+        .animate-scroll {
+          animation: scrollY 10s linear infinite;
+        }
+  </style>
 </head>
 
 <body class="bg-black text-white font-sans">
@@ -55,7 +65,7 @@
 
       <!-- Right Grid Images -->
       <div id="scroll-container" class="relative z-10 h-72 sm:h-80 md:h-80 w-full overflow-hidden flex justify-center">
-        <div id="scroll-content" class="grid grid-cols-2 gap-2">
+        <div id="scroll-content" class="grid grid-cols-2 gap-2 animate-scroll">
           <div class="h-32 w-32 bg-cover bg-center rounded-md" style="background-image: url('static/images.jpeg');"></div>
           <div class="h-32 w-32 bg-cover bg-center rounded-md" style="background-image: url('static/images (1).jpeg');"></div>
           <div class="h-32 w-32 bg-cover bg-center rounded-md" style="background-image: url('static/images (2).jpeg');"></div>
@@ -78,7 +88,7 @@
       <!-- Service Grid (Static) -->
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
         <!-- Service 1 -->
-        <div class="service-card bg-gray-900 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform duration-300">
+        <div class="service-card bg-white/10 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform duration-300">
           <img src="static/images.jpeg" alt="Wedding Photography" class="w-full h-56 object-cover">
           <div class="p-6">
             <h3 class="text-lg md:text-xl font-semibold mb-2">Wedding Photography</h3>
@@ -89,7 +99,7 @@
         </div>
 
         <!-- Service 2 -->
-        <div class="service-card bg-gray-900 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform duration-300">
+        <div class="service-card bg-white/10 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform duration-300">
           <img src="static/images (1).jpeg" alt="Portrait Photography" class="w-full h-56 object-cover">
           <div class="p-6">
             <h3 class="text-lg md:text-xl font-semibold mb-2">Portrait Photography</h3>
@@ -100,7 +110,7 @@
         </div>
 
         <!-- Service 3 -->
-        <div class="service-card bg-gray-900 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform duration-300">
+        <div class="service-card bg-white/10 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform duration-300">
           <img src="static/images (2).jpeg" alt="Landscape Photography" class="w-full h-56 object-cover">
           <div class="p-6">
             <h3 class="text-lg md:text-xl font-semibold mb-2">Landscape Photography</h3>
@@ -141,7 +151,6 @@
         </a>
       </div>
 
-      <p class="text-gray-500 text-xs md:text-sm mt-6">© 2025 T.K.SRIRAM Photography. All rights reserved.</p>
     </div>
   </footer>
 
